move output directory

--- a/thesis/Makefile
+++ b/thesis/Makefile
@@ -2,17 +2,18 @@ SRCDIR=src
 SRCFILE=thesis
 PDF=$(SRCFILE).pdf
 CITATIONS=citations.bib
-OUTPUT=../build
+OUTPUT=build
 
 export TEXINPUTS := ifimaster/:duoforside/:$(TEXINPUTS)
 
 all: $(PDF)
 
 $(PDF): $(SRCDIR)/$(SRCFILE).tex $(SRCDIR)/$(CITATIONS)
-	cd $(SRCDIR) && latexmk --output-directory=$(OUTPUT) --shell-escape -pdf -use-make $(SRCFILE) && mv $(OUTPUT)/$(PDF) ..
+	cd $(SRCDIR) && latexmk --output-directory=../$(OUTPUT) --shell-escape -pdf -use-make $(SRCFILE) && cd .. && mv $(OUTPUT)/$(PDF) .
 
 clean:
-	rm $(PDF) && cd $(SRCDIR) && latexmk -CA && rm $(SRCFILE).bbl $(SRCFILE).run.xml
+	rm $(PDF) && rm -rf $(OUTPUT)
+	# rm $(PDF) && cd $(SRCDIR) && latexmk -CA && rm $(SRCFILE).bbl $(SRCFILE).run.xml
 
 watch:
 	fswatch -o --event Updated src/thesis.tex src/citations.bib | while read _; do clear; make; done;
