--- a/thesis/Makefile
+++ b/thesis/Makefile
@@ -8,7 +8,7 @@ export TEXINPUTS := ifimaster/:duoforside/:$(TEXINPUTS)
 
 all: $(PDF)
 
-$(PDF): $(SRCDIR)/$(SRCFILE).tex $(SRCDIR)/$(CITATIONS)
+$(PDF): $(SRCDIR)/$(SRCFILE).tex $(SRCDIR)/$(CITATIONS) $(SRCDIR)/chapters
 	cd $(SRCDIR) && latexmk --output-directory=../$(OUTPUT) --shell-escape -pdf -use-make $(SRCFILE) && cd .. && mv $(OUTPUT)/$(PDF) .
 
 clean:
@@ -16,5 +16,6 @@ clean:
 	# rm $(PDF) && cd $(SRCDIR) && latexmk -CA && rm $(SRCFILE).bbl $(SRCFILE).run.xml
 
 watch:
-	fswatch -o --event Updated src/thesis.tex src/citations.bib | while read _; do clear; make; done;
+	fswatch -o --event Updated src/chapters/*.tex src/thesis.tex src/citations.bib | while read _; do clear; make; done;
+	src/thesis.tex src/citations.bib | while read _; do clear; make; done;
 
